[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Profile.gd" type="Script" id=1]

[node name="Profile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 520.0
margin_bottom = 940.0

[node name="PlayerNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 14.0
text = "Name: "

[node name="TimePlayedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 500.0
margin_bottom = 32.0
text = "Time Played: "

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 500.0
margin_bottom = 50.0
text = "Level: "

[node name="XpLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 500.0
margin_bottom = 68.0
text = "XP: "

[node name="BestComboLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 500.0
margin_bottom = 86.0
text = "Best Combo: "

[node name="LinesClearedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 500.0
margin_bottom = 104.0
text = "Dots Cleared: "

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 500.0
margin_bottom = 112.0

[node name="ObjectivesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 500.0
margin_bottom = 130.0
text = "Objectives:"

[node name="ObjectivesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 500.0
margin_bottom = 134.0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 138.0
margin_right = 500.0
margin_bottom = 142.0

[node name="TrophiesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 500.0
margin_bottom = 160.0
text = "Trophies:"

[node name="TrophiesContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 500.0
margin_bottom = 164.0

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 168.0
margin_right = 500.0
margin_bottom = 172.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 176.0
margin_right = 500.0
margin_bottom = 326.0

[node name="AvatarFrame" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )

[node name="Avatar" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/AvatarFrame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 128, 128 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 256.0
margin_bottom = 150.0

[node name="ChangeAvatarButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 102.0
margin_bottom = 20.0
text = "Change Avatar"

[node name="FrameSelection" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 102.0
margin_bottom = 44.0

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 500.0
margin_bottom = 350.0
text = "Back"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 496.0
margin_bottom = 416.0
access = 2
filters = PoolStringArray( "*.png, *.jpg, *.jpeg ; Image Files" )
__meta__ = {
"_edit_use_anchors_": false
}
